duicontrolpanel (0.11.6.2~unreleased) unstable; urgency=low

  * Fixes the flashing before the appletpage openings

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 10 Feb 2011 11:40:50 +0100

duicontrolpanel (0.11.6.1) unstable; urgency=low

  [ Sandor Pinter ]
  * Fixes: NB#224500 - Highlight shown when pressing a static label in
    Notification settings

  [ Robert Manner ]
  * Fixes: NB#225161 - Incorrect title on dialog when Settings does not
    respond anymore
  * Fixes: NB#225295 - [TASK] On relaunching the settings app, the view
    is still showing the bottom list of categories
  * Changes: It is now configurable if the category icons are above or
    below the applet icons using the ComponentOrder key in the
    .cpcategory files
  * Changes: Makes -outprocess mode default on usual running ways

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 09 Feb 2011 20:47:25 +0100

duicontrolpanel (0.11.5) unstable; urgency=low

  [ Sandor Pinter ]
  * Fixes: NB#220905 - Personalise settings menu looks different on
    second opening
  * Fixes: NB#220590 - Toggle button doesn't always reflect the real
    setting value
  * Fixes: NB#223192 - Context sensitive help icon is shown as if it is
    inactive.

  [ Robert Manner ]
  * Fixes some little DBus API problems when running in outprocess mode
    (on appletpage requests)
  * New: the applet can specify in its .desktop file if it has a
    mainview through DCP/HasMainView key
  * Fixes flickering at applet mainview opening in outprocess mode
  * Fixes: NB#224371 - Wrong style for scroll indicator used in Settings

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 02 Feb 2011 13:51:34 +0100

duicontrolpanel (0.11.4) unstable; urgency=low

  [ Sandor Pinter ]
  * Fixes: NB#220025 - a proposal to change #CommonXLargeHeaderInverted
    to #CommonApplicationHeaderInverted

  [ Robert Manner ]
  * Fixes: NB#220539 - toolbar at the bottom is not inverted, but